First running jabkit\build\distribution\jabkit\jabkit --help